# KolokwiumWH

zad4/: Makefile
zad5/: CMakeLists.txt
zad6/CreateLibrary/: CMakelists.txt
zad6/UseLibrary/: CMakelists.txt
